martian-derive/tests/ui_martian_struct/test_missing_martian_type.stderr
error[E0277]: the trait bound `Foo: martian::MartianFileType` is not satisfied
 --> $DIR/test_missing_martian_type.rs:5:10
  |
5 | #[derive(MartianStruct)]
  |          ^^^^^^^^^^^^^ the trait `martian::MartianFileType` is not implemented for `Foo`
  |
  = note: required because of the requirements on the impl of `martian::AsMartianPrimaryType` for `Foo`
  = note: required because of the requirements on the impl of `martian::AsMartianBlanketType` for `Foo`
  = note: required by `martian::AsMartianBlanketType::as_martian_blanket_type`
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
